# Multi-agent-trading-system

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  DISCLAIMER.md  Makefile  README.md  alembic.ini  docker-compose.lite.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-lock.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
agents/: base.py
agents/decision/: agent.py  proposal_builder.py  signal_aggregator.py
agents/execution/: agent.py  broker_interface.py  mt5_bridge.py  paper_broker.py  symbol_mapper.py
agents/market_data/: agent.py  fetcher.py  normalizer.py  websocket_handler.py
agents/monitoring/: agent.py
agents/risk/: agent.py  circuit_breaker.py  drawdown_monitor.py  position_sizer.py
agents/sentiment/: agent.py
agents/technical_analysis/: agent.py  candle_buffer.py  indicators.py  signal_generator.py
agents/technical_analysis/ml/: __init__.py  feature_engineer.py  label_generator.py  ml_signal_generator.py  model_registry.py  model_trainer.py
api/: main.py  websocket.py
api/routers/: control.py  dashboard.py  positions.py  status.py
backtest/: __init__.py  benchmarks.py  config.py  data.py  engine.py  metrics.py  ml_eval.py  report.py  run.py  types.py  walkforward.py
backtest/results/: EVALUATION_REPORT.html  baseline_metrics.json  improved_metrics.json
core/: config.py  exceptions.py  logging.py  messaging.py  metrics.py
core/db/: connection.py  models.py
core/db/migrations/: env.py
core/db/migrations/versions/: 001_initial_schema.py
core/db/repositories/: candle_repo.py  position_repo.py  trade_repo.py
dashboard/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.js  vite.config.js
dashboard/src/: App.jsx  api.js  styles.css
dashboard/src/components/: ArchitectureDiagram.jsx
dashboard/src/pages/: Live.jsx  Showcase.jsx
dashboard/tests/: smoke.spec.js
data/sample/: BTC-USDT_1d.csv  BTC-USDT_1h.csv  BTC-USDT_4h.csv  ETH-USDT_1d.csv  ETH-USDT_1h.csv  ETH-USDT_4h.csv
data_sources/: __init__.py  base.py  mt5_source.py  public_exchange.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md  EVALUATION.md  MODEL_CHANGES.md  adr_001_mt5_hybrid_execution.py  adr_002_signal_confidence.md  runbook.md
infra/: Caddyfile  cloud-init.yaml  oci_retry_apply.sh
infra/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
infrastructure/: Dockerfile.agent  prometheus.yml
infrastructure/postgres/: init.sql
mt5_ea/: README.md  TradingSystemEA.mq5
scripts/: backtest.py  evaluate_model.py  healthcheck.py  seed.py  seed_historical.py  start.py  train_model.py
tests/data/: sample_candles_btc_1m.csv
tests/integration/: conftest.py  test_e2e_paper_trading.py  test_e2e_pipeline.py  test_full_pipeline.py  test_ta_pipeline.py
tests/unit/: test_backtest.py  test_core.py  test_data_sources.py  test_decision.py  test_execution.py  test_indicators.py  test_ml.py  test_models.py  test_mt5_bridge.py  test_repositories.py  test_risk.py
